<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/bb_toolbar"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginEnd="@dimen/general_horizontal_margin"
        android:layout_marginStart="@dimen/general_horizontal_margin"
        android:gravity="center_horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            app:srcCompat="@drawable/ic_chevron_left"
            android:contentDescription="@string/toolbar_chevron_left" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:singleLine="true"
            android:text="@string/toolbar_place_title"
            android:textColor="@android:color/black" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            app:srcCompat="@drawable/ic_chevron_right"
            android:contentDescription="@string/toolbar_chevron_right" />
    </LinearLayout>
</android.support.v7.widget.Toolbar>
