<?xml version="1.0" encoding="utf-8"?>
<dk.mustache.beaconbacon.customviews.CustomToolbar xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/bb_toolbar_custom"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center_horizontal"
    android:gravity="center_horizontal">

    <LinearLayout
        android:id="@+id/bb_toolbar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/general_horizontal_margin"
        android:layout_marginStart="@dimen/general_horizontal_margin"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/bb_toolbar_arrow_left"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginEnd="10dp"
            android:contentDescription="@string/toolbar_chevron_left"
            android:tint="@color/colorArrows"
            app:srcCompat="@drawable/ic_chevron_left" />

        <LinearLayout
            android:id="@+id/bb_toolbar_title_layout"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:weightSum="100">

            <TextView
                android:id="@+id/bb_toolbar_title"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_gravity="center"
                android:layout_weight="50"
                android:gravity="center"
                android:singleLine="true"
                android:text="@string/toolbar_place_title"
                android:textColor="@android:color/black"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/bb_toolbar_subtitle"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_gravity="center"
                android:layout_weight="50"
                android:gravity="center"
                android:singleLine="true"
                android:text="@string/toolbar_place_title"
                android:textColor="@android:color/darker_gray"
                android:textSize="12sp" />
        </LinearLayout>

        <ImageView
            android:id="@+id/bb_toolbar_arrow_right"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginStart="10dp"
            android:contentDescription="@string/toolbar_chevron_right"
            android:tint="@color/colorArrows"
            app:srcCompat="@drawable/ic_chevron_right" />
    </LinearLayout>
</dk.mustache.beaconbacon.customviews.CustomToolbar>
